[tool.poetry]
name = "sphinxcontrib-data-pipeline"
version = "0.1.0"
description = "This extension allows you to document data processing pipelines that connect tools (\"drivers\") and corresponding data products"
authors = ["Michael Buehlmann <buehlmann.michi@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^7.3.7"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-toolbox = "^3.5.0"
gitpython = "^3.1.43"
strictyaml = "^1.7.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pydata-sphinx-theme = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
