[tool.poetry]
name = "sphinxcontrib-data-pipeline"
version = "0.1.0"
description = "This extension allows you to document data processing pipelines that connect tools (\"drivers\") and corresponding data products"
authors = ["Michael Buehlmann <buehlmann.michi@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^7.3.7"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-toolbox = "^3.5.0"
gitpython = "^3.1.43"
strictyaml = "^1.7.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pydata-sphinx-theme = "^0.15.2"


[tool.poetry.group.dev.dependencies]
bump-my-version = "^0.20.2"

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "[tool.poetry]\nversion = \"{current_version}\""
replace = "[tool.poetry]\nversion = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "sphinxcontrib_data_pipeline/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
